Add simple curves

--- a/MVC_test/Views/Home/Index.cshtml
+++ b/MVC_test/Views/Home/Index.cshtml
@@ -15,7 +15,7 @@
             <label>
                 Y : <input id="Y0" type="text" placeholder="Y" />
             </label>
-            <button class="btn btn-light">Tracer la courbe</button>
+            <button class="btn btn-light" onclick="addCurve(this)">Tracer la courbe</button>
     </div>
 </div>
 
