Bypass "Math." call in inputs

--- a/MVC_test/Views/Home/Index.cshtml
+++ b/MVC_test/Views/Home/Index.cshtml
@@ -3,9 +3,9 @@
 
 }
 @model MVC_test.Models.ListCurves
-<div class="text-center container">
+<div class="chart container">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.6.0/Chart.bundle.js"></script>
-    <canvas id="myChart" width="100" height="50"></canvas>
+    <canvas id="myChart" width="100" height="100"></canvas>
 </div>
 <div id="listEntries">
     <div id="curve0">
